feat(): 添加天气的几个接口
说明：
- /weather/ntp:实时时间获取接口
- /waather/3d:未来三天的天气信息接口

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
